test/errhandling/modes/strict-try.good
strict-try.chpl:5: In function 'propError':
strict-try.chpl:6: error: call to throwing function throwAnError without try or try! (strict mode)
../ExampleErrors.chpl:1: note: throwing function throwAnError defined here
